// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Content Children 1`] = `
<DocumentFragment>
  <div>
    source: data
  </div>
</DocumentFragment>
`;

exports[`Content Content Component 1`] = `
<DocumentFragment>
  <div>
    source: data
  </div>
</DocumentFragment>
`;

exports[`Content Content Hook 1`] = `
<DocumentFragment>
  <div>
    source: data
  </div>
</DocumentFragment>
`;

exports[`Content Content Render 1`] = `
<DocumentFragment>
  <div>
    source: data
  </div>
</DocumentFragment>
`;

exports[`Custom Content Content Children 1`] = `
<DocumentFragment>
  <div>
    custom content
  </div>
</DocumentFragment>
`;

exports[`Custom Content Content Component 1`] = `
<DocumentFragment>
  <div>
    custom content
  </div>
</DocumentFragment>
`;

exports[`Custom Content Content Hook 1`] = `
<DocumentFragment>
  <div>
    custom content
  </div>
</DocumentFragment>
`;

exports[`Custom Content Content Render 1`] = `
<DocumentFragment>
  <div>
    custom content
  </div>
</DocumentFragment>
`;
